# wordsegment-another

./: .gitignore  Cargo.toml  README.md  pyproject.toml  reinstall.sh  std.txt
.github/workflows/: rust.yml
benchmarks/: run.py
src/: corpus.rs  corpus_loader.rs  lib.rs  main.rs  scorer.rs  segmentator.rs
src/searchers/: mod.rs  queue_searcher.rs  recursive_searcher.rs
tests/: test_searchers.rs  test_segmantation.rs  test_segmentator.rs
tests/common/: mod.rs
wordsegment_another/: __init__.py
