[package]
name = "wordsegment-another"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wordsegment_another"
# "cdylib" is necessary to produce a shared library for Python to import from.
# crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
log = "0.4.19"
env_logger="0.10.0"
num-bigfloat = "1.6.2"

#[dependencies.pyo3]
#version = "0.19.1"
## "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
#features = ["abi3-py37"]

[dev-dependencies]
lazy_static = "1.4"