[package]
name = "wordsegment-another"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wordsegment_another"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.19"
env_logger="0.10.0"
lazy_static = "1.4"

[dependencies.pyo3]
version = "0.19.1"

[dev-dependencies]
rstest = "0.18.1"
